vlib/v/checker/tests/fixed_array_size_err.vv
const size = -1

fn main() {
	a := [size]int{}
	b := [0]byte{}
	println(a)
	println(b)
}
